<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/nursePatient_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_weight="1.0"
                android:text="@string/nursePatient" />

            <Button
                android:id="@+id/nurseDrug_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dip"
                android:layout_weight="1.0"
                android:text="@string/nurseDrug" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/nursePassword_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_weight="1.0"
                android:text="@string/passwordAdmin" />

            <Button
                android:id="@+id/RFID_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dip"
                android:layout_weight="1.0"
                android:text="@string/RFID" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/null_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginTop="10dip"
        android:text=""
        android:textColor="#ffffff"
        android:textSize="1dip" />

</LinearLayout>