<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/departmentManage_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:text="@string/department"
        android:textColor="#ffffff"
        android:textSize="24dip" />

    <Spinner
        android:id="@+id/departmentManage_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:entries="@array/departmentArray" />

    <TextView
        android:id="@+id/departmentManageName_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:text="@string/departmentName"
        android:textColor="#ffffff"
        android:textSize="24dip" />

    <EditText
        android:id="@+id/departmentManageName_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:inputType="text" />

    <TextView
        android:id="@+id/departmentManagePhone_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:text="@string/departmentPhone"
        android:textColor="#ffffff"
        android:textSize="24dip" />

    <EditText
        android:id="@+id/departmentManagePhone_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:inputType="number" />

</LinearLayout>