<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/logon"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/logonName_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30dip"
            android:text="@string/logonName"
            android:textColor="#000000"
            android:textSize="24dip" />

        <EditText
            android:id="@+id/logonName_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="30dip"
            android:layout_toRightOf="@+id/logonName_text"
            android:inputType="text"
            android:maxHeight="42dip"
            android:maxWidth="200dip"
            android:minHeight="42dip"
            android:minWidth="100dip" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/logonPass_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30dip"
            android:text="@string/logonPass"
            android:textColor="#000000"
            android:textSize="24dip" />

        <EditText
            android:id="@+id/logonPass_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="30dip"
            android:layout_toRightOf="@+id/logonPass_text"
            android:inputType="textPassword"
            android:maxHeight="42dip"
            android:maxWidth="200dip"
            android:minHeight="42dip"
            android:minWidth="100dip" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Spinner
            android:id="@+id/logon_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:entries="@array/logonArray"
            android:layout_marginLeft="30dip"
            android:layout_marginRight="30dip" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/logon_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dip"
            android:layout_weight="1.0"
            android:text="@string/logonButton" />

        <Button
            android:id="@+id/close_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dip"
            android:layout_weight="1.0"
            android:text="@string/logonClose" />
    </LinearLayout>


</LinearLayout>